初始化工作

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PartTimeJob</string>
+    <string name="all">重庆市</string>
+    <string name="top_title">蜂鸟兼职</string>
 </resources>
