--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">PartTimeJob</string>
+    <string name="app_name">蜂鸟兼职</string>
     <string name="all">重庆市</string>
     <string name="top_title">蜂鸟兼职</string>
+    <string name="edit_string">请输入职位名称、企业名称进行搜索</string>
 </resources>
