--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="edit_string">请输入职位名称、企业名称进行搜索</string>
 
 
-
     <!-- # -->
 
     <string name="viewpager_indicator">%1$d/%2$d</string>
@@ -217,4 +216,6 @@
     <string name="begin_nav">开始导航</string>
 
 
+    <string name="username">请输入您的手机号</string>
+    <string name="password">请输入您的密码</string>
 </resources>
