--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -222,45 +222,9 @@
         请务必填写您的真实手机号和姓名，手机号注册后不允许修改</string>
 
     <string name="back">返回</string>
+    <string name="save">保存</string>
 
 
-    <string-array name="province">
-        <item>北京市</item>
-        <item>上海市</item>
-        <item>天津市</item>
-        <item>重庆市</item>
-        <item>河北省</item>
-        <item>北京市</item>
-        <item>上海市</item>
-        <item>天津市</item>
-        <item>重庆市</item>
-        <item>河北省</item>
-        <item>山西省</item>
-        <item>内蒙古</item>
-        <item>辽宁省</item>
-        <item>吉林省</item>
-        <item>黑龙江省</item>
-        <item>江苏省</item>
-        <item>安徽省</item>
-        <item>福建省</item>
-        <item>江西省</item>
-        <item>山东省</item>
-        <item>河南省</item>
-        <item>湖北省</item>
-        <item>湖南省</item>
-        <item>四川省</item>
-        <item>贵州省</item>
-        <item>云南省</item>
-        <item>西藏</item>
-        <item>陕西省</item>
-        <item>甘肃省</item>
-        <item>青海省</item>
-        <item>宁夏</item>
-        <item>新疆</item>
-        <item>台湾省</item>
-        <item>香港</item>
-        <item>澳门</item>
-        <item>钓鱼岛</item>
-    </string-array>
+
 
 </resources>
