添加兼职信息列表

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">蜂鸟兼职</string>
     <string name="all">重庆市</string>
     <string name="top_title">蜂鸟兼职</string>
+    <string name="finsh">完成</string>
     <string name="edit_string">请输入职位名称、企业名称进行搜索</string>
 
 
