--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,17 @@
     <string name="edit_string">请输入职位名称、企业名称进行搜索</string>
 
 
+    <!-- 刷新相关-->
+    <string name="btn_scroll_view">ScrollView demo</string>
+    <string name="btn_list_view">ListView demo</string>
+
+    <string name="header_hint_refresh_normal">Pull to refresh</string>
+    <string name="header_hint_refresh_ready">下拉刷新</string>
+    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
+    <string name="header_hint_refresh_time">上次刷新时间：</string>
+    <string name="footer_hint_load_normal">点击加载更多...</string>
+    <string name="footer_hint_load_ready">放开加载更多..</string>
+    <!-- 刷新相关-->
     <!-- # -->
 
     <string name="viewpager_indicator">%1$d/%2$d</string>
