--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,9 +10,9 @@
     <string name="btn_scroll_view">ScrollView demo</string>
     <string name="btn_list_view">ListView demo</string>
 
-    <string name="header_hint_refresh_normal">Pull to refresh</string>
+    <string name="header_hint_refresh_normal">下拉刷新</string>
     <string name="header_hint_refresh_ready">下拉刷新</string>
-    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
+    <string name="header_hint_refresh_loading">正在刷新&#8230;</string>
     <string name="header_hint_refresh_time">上次刷新时间：</string>
     <string name="footer_hint_load_normal">点击加载更多...</string>
     <string name="footer_hint_load_ready">放开加载更多..</string>
